--- a/calculator-ci/sonar-project.properties
+++ b/calculator-ci/sonar-project.properties
@@ -1,4 +1,6 @@
 sonar.organization=flowsycurls
-sonar.projectKey=FlowsyCurls_java-ci-pipeline
+sonar.projectKey=FlowsyCurls_java-ci-pipeline2
+sonar.projectVersion=1.0
 sonar.sources=.
 sonar.host.url=https://sonarcloud.io
+sonar.sourceEncoding=UTF-8
