--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,8 @@
 sonar.organization=flowsycurls
 sonar.projectKey=FlowsyCurls_java-ci-pipeline
+sonar.projectName=java-ci-pipeline
+sonar.projectVersion=1.0
+sonar.language=java
 sonar.sources=.
 sonar.host.url=https://sonarcloud.io
-
+sonar.java.binaries=target/classes 
